src/objects/APTS_Order_LSP_Details__c.object
<CustomObject>
    <description>Order LSP Details</description>
    <fields>
        <fullName>APS_Floor__c</fullName>
        <description>Floor</description>
        <label>Floor</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Area__c</fullName>
        <description>Area</description>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Building__c</fullName>
        <description>Building</description>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CollectCounters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Counters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_CommercialMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commercial Machine</description>
        <label>Commercial Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Commercial_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commercial Machine</description>
        <label>Commercial Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationFileURL__c</fullName>
        <description>Configuration File URL</description>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationManualAgreementsURL__c</fullName>
        <description>Configuration Manual &amp; Agreements URL</description>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_File_URL__c</fullName>
        <description>Configuration File URL</description>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Manual_Agreements_URL__c</fullName>
        <description>Configuration Manual &amp; Agreements URL</description>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerReference__c</fullName>
        <description>Customer Reference</description>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Reference__c</fullName>
        <description>Customer Reference</description>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Deinstall_NonJDEMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>APTS_Deinstall_NonJDEMachine__c</description>
        <label>De-install Non-JDE Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Elevator_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Floor__c</fullName>
        <description>Floor</description>
        <label>Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_From_Area__c</fullName>
        <label>From Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_From_Building__c</fullName>
        <label>From Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_From_Floor__c</fullName>
        <label>From Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_From_ShipTo_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From ShipTo Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Order LSP Details</relationshipLabel>
        <relationshipName>Order_LSP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_IncludesWaterfilterCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Waterfilter Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Contact</description>
        <label>Service Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order LSP Details</relationshipLabel>
        <relationshipName>Order_LSP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_crockeryVolumeSize__c</fullName>
        <description>JDE crockery volume size</description>
        <label>JDE crockery volume size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_crockery_volume_size__c</fullName>
        <description>JDE crockery volume size</description>
        <label>JDE crockery volume size</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Description__c</fullName>
        <description>LSP Description</description>
        <label>LSP Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Details__c</fullName>
        <description>LSP Details</description>
        <label>LSP Details</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OwnedByCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Owned By Customer</description>
        <label>Owned By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Owned_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Owned By Customer</description>
        <label>Owned By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PlugPlay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plug &amp; Play</description>
        <label>Plug &amp; Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Plug_Play__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plug &amp; Play</description>
        <label>Plug &amp; Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Project_Number__c</fullName>
        <label>Project Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RefurbishedMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refurbished Machine</description>
        <label>Refurbished Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Refurbished_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refurbished Machine</description>
        <label>Refurbished Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Require_De_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require De-Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Require_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Requires_LSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires LSP</description>
        <label>Requires LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Schedule_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Second_Service_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Service Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order LSP Details (Second Service Contact)</relationshipLabel>
        <relationshipName>Order_LSP_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SmokingArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Smoking_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_StairClimber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stair Climber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Stair_Climber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stair Climber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stopover</description>
        <label>Stopover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Subject__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Workshop_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workshop Required</description>
        <label>Workshop Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Workshop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workshop Required</description>
        <label>Workshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_isProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProject</label>
        <type>Checkbox</type>
    </fields>
    <label>Order LSP Detail</label>
    <listViews>
        <fullName>DK_Digital_Order_APTS_Order_LSP_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>DK Digital Order</label>
        <queue>DK_Digital_Order</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Order LSP Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order LSP Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>